--- a/src/styles.css
+++ b/src/styles.css
@@ -152,3 +152,46 @@
 .login-form-btn:hover {
     cursor: pointer;
 }
+
+body {
+  display: flex;
+  background-color: #070F2B;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  justify-content: space-evenly;
+  height: 100vh;
+  background-image: url(assets/dark_logo.png);
+  background-repeat: no-repeat;
+  background-position-x: 144px;
+  background-position-y: 133px;
+  background-size: 50rem;
+}
+
+p {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  font-family: "Istok Web", sans-serif;
+  padding-top: 55px;
+}
+
+#logo {
+  width: 60px;
+  height: 60px;
+}
+
+h1 {
+  font-family: 'Kodchasan', sans-serif;
+  font-size: 60px;
+  padding-bottom: 25px;
+}
+
+h3 {
+  font-family: 'Kodchasan', sans-serif;
+  margin-top: 80px;
+  font-size: 40px;
+  text-align: center;
+  padding-bottom: 55px;
+}
