--- a/src/styles.css
+++ b/src/styles.css
@@ -127,7 +127,7 @@
     width: 100%;
   }
   
-.container-login-form-btn {
+  .container-login-form-btn {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -153,7 +153,21 @@
     cursor: pointer;
 }
 
-body {
+.login-form-btn > a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 10px;
+    background-color: #FF204E;
+}
+
+
+
+.login {
   display: flex;
   background-color: #070F2B;
   align-items: center;
@@ -168,7 +182,7 @@ body {
   background-size: 50rem;
 }
 
-p {
+.versao {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -182,7 +196,7 @@ p {
   height: 60px;
 }
 
-h1 {
+.logo {
   font-family: 'Kodchasan', sans-serif;
   font-size: 60px;
   padding-bottom: 25px;
