--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -37,8 +37,10 @@ p {
     padding-right: 10px;
 }
 
-button.navbar-toggler.collapsed {
-    background: white !important;
+#user {
+    background: black;
+    border: none;
+    font-size: x-large;
 }
 
 .side-menu-text {
