--- a/src/css/navbar_hosts.css
+++ b/src/css/navbar_hosts.css
@@ -12,10 +12,12 @@
     justify-content: space-between;
     max-width: 300px;
     height: 30px;
+    margin-bottom: 16px;
 }
 
 .dropdown-acao select {
     margin-left: 20px;
+    font-size: 12px;
 }
 
 .acao-icon {
